--- a/seednode/docker-compose.yml
+++ b/seednode/docker-compose.yml
@@ -73,6 +73,7 @@ services:
             -maxconnections=800
             -timeout=30000
             -listen=0
+            -peerbloomfilters=1
             -rpcuser=${RPC_USER}
             -rpcpassword=${RPC_PASSWORD}
             -rpcallowip=0.0.0.0/0
