nginx should also always restart

--- a/seednode/docker-compose.yml
+++ b/seednode/docker-compose.yml
@@ -96,6 +96,7 @@ services:
             dockerfile: docker/prod/Dockerfile-nginx
         image: bisq/nginx
         container_name: nginx
+        restart: unless-stopped
         depends_on:
             - collectd
         expose:
